<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hk_background"
    android:orientation="horizontal"
    tools:context="com.wolkabout.hexiwear.activity.NavActivity">
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="495dp"
        android:background="@android:color/white"
        android:elevation = "20dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/stepCountBut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_colour_1"
            android:fontFamily="sans-serif-condensed"
            android:onClick="goStepCount"
            android:text="Step Counter"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="monospace"/>


        <Button
            android:id="@+id/heartRateBut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/stepCountBut"
            android:layout_weight="1"
            android:background="@drawable/button_colour_2"
            android:fontFamily="sans-serif-condensed"
            android:onClick="goHeartRate"
            android:text="Heart Rate"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/mapBut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_colour_4"
            android:fontFamily="sans-serif-condensed"
            android:onClick="goMap"
            android:text="Map"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <View
            android:id="@+id/filler2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <View
            android:id="@+id/filler4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <View
            android:id="@+id/filler6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />


        <View
            android:id="@+id/filler1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <View
            android:id="@+id/filler3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <View
            android:id="@+id/filler5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <View
            android:id="@+id/filler7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/rangeBut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_colour_6"
            android:fontFamily="sans-serif-condensed"
            android:onClick="goRange"
            android:text="Set Range"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/uploadGPS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_colour_7"
            android:fontFamily="sans-serif-condensed"
            android:onClick="goGPS"
            android:text="Upload GPS"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/chatButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_colour_3"
            android:fontFamily="sans-serif-condensed"
            android:onClick="goChat"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/userBut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_colour_5"
            android:fontFamily="sans-serif-condensed"
            android:onClick="goUserLogin"
            android:text="User Login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>
</LinearLayout>
